# AMPLIFY-improved

./: LICENSE  README.md  eval_libero.py  pyproject.toml  requirements.txt  setup.py  train_ctclai.py  train_forward_dynamics.py  train_inverse_dynamics.py  train_motion_tokenizer.py
amplify/: __init__.py  amplify.py  bundle_amplify.py
amplify/loaders/: __init__.py  base_dataset.py  custom_dataset.py  libero_dataset.py
amplify/models/: ctclai.py  diffusion_policy.py  dit.py  flow_policy.py  forward_dynamics.py  inverse_dynamics.py  losses.py  motion_tokenizer.py  transformer.py
amplify/models/encoders/: __init__.py  t5.py  vision_encoders.py
amplify/utils/: cfg_utils.py  data_utils.py  logger.py  metrics.py  preprocessing_utils.py  train.py  vis_utils.py
amplify/utils/kp_utils/: query.py  query_utils.py
amplify/utils/libero_utils/: custom_venv.py  env_utils.py  flow_utils.py  wrappers.py
amplify/utils/model/: attn_masks.py
cfg/: eval_libero.yaml  train_ctclai.yaml  train_forward_dynamics.yaml  train_inverse_dynamics.yaml  train_motion_tokenizer.yaml
cfg/preprocessing/: preprocess_libero.yaml
preprocessing/: get_action_stats.py  preprocess_base.py  preprocess_custom_dataset.py  preprocess_libero.py
replicate_results/: replicate_bc.sh  replicate_few_shot.sh  replicate_zero_shot.sh
